2021-01-23 Bassem Girgis <brgirgis -at- gmail.com>

- Migrate to pyreadline3/pyreadline3.

2020-10-21 Bassem Girgis <brgirgis -at- gmail.com>

- Fork pyreadline and update/release pyreadline3.

2011-04-10 Takayuki SHIMIZUKAWA <shimizukawa -at- gmail.com>

- Python3 ready.

2008-08-25 Jörgen Stenarson <jorgen.stenarson -at- bostream.nu>

- Merging tab insert patch from Vivian De Smedt. Removed comments
  with vds initials.

2008-02-21 Jörgen Stenarson <jorgen.stenarson -at- bostream.nu>

- unicodehelper functions now defaults to ascii if supplied pyreadline_encoding is not a valid encoding. This is a brute force solution to ticket #228 it fixes immediate symptom but may not be the correct solution to the underlying problem.

2008-01-07 Jörgen Stenarson <jorgen.stenarson -at- bostream.nu>

- Reintroduced code to make pyreadline work with emacs. Not tested.
  Requested by Frank Wang.

2008-01-04 Jörgen Stenarson <jorgen.stenarson -at- bostream.nu>

- Chunking calls to WriteConsoleW to ensure not exceeding 64k limit

2007-11-28 Jörgen Stenarson <jorgen.stenarson -at- bostream.nu>

- Warning messages for failed calls to parse_and_bind now disabled by default
  Can be enabled by call to debug_output("on_nologfile") in pyreadlineconfig.ini

2007-11-20 Jörgen Stenarson <jorgen.stenarson -at- bostream.nu>

- Applying patch from pan to fix flickering cursor problem when doing input
  of chinese.

2007-11-09 Jörgen Stenarson <jorgen.stenarson -at- bostream.nu>

- make all conversion is done by ensure_unicode or ensure_str to ensure uniform
  handling of unicode issues.

2007-11-09 Jörgen Stenarson <jorgen.stenarson -at- bostream.nu>

- More fixes to unicode handling.

2007-11-09 Jörgen Stenarson <jorgen.stenarson -at- bostream.nu>

- Fixes to make clipboard play nice with unicode. Quick that treats the clipboard as
  being str with pyreadline_encoding data. Thus convert to unicode when pasting and
  converting to str when copying.
