@@ -76,6 +76,7 @@
     "bdist",
     "ctypes",
     "Girgis",
+    "inputrc",
     "ipython",
     "keydescr",
     "keysyms",
